--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev:win": "set ENVIROMENT=DEVELOPMENT && next dev -p 5001",
+    "dev:mac": "ENVIROMENT=DEVELOPMENT next dev -p 5001",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "formik": "^2.2.6",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-spinners": "^0.10.6",
+    "yup": "^0.32.9"
   }
 }
