--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.3",
     "react-spinners": "^0.10.6",
+    "redux": "^4.0.5",
     "yup": "^0.32.9"
   }
 }
