--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
     "react-spinners": "^0.10.6",
     "redux": "^4.0.5",
     "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@iconify/icons-ant-design": "^1.1.0",
+    "@iconify/icons-carbon": "^1.1.3",
+    "@iconify/icons-dashicons": "^1.1.0",
+    "@iconify/icons-gridicons": "^1.1.1",
+    "@iconify/icons-ic": "^1.1.3",
+    "@iconify/react": "^1.1.4"
   }
 }
