--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "chart.js": "^3.1.1",
     "formik": "^2.2.6",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.3",
     "react-spinners": "^0.10.6",
@@ -23,8 +25,12 @@
     "@iconify/icons-ant-design": "^1.1.0",
     "@iconify/icons-carbon": "^1.1.3",
     "@iconify/icons-dashicons": "^1.1.0",
+    "@iconify/icons-fe": "^1.1.0",
+    "@iconify/icons-fluent": "^1.1.12",
     "@iconify/icons-gridicons": "^1.1.1",
     "@iconify/icons-ic": "^1.1.3",
+    "@iconify/icons-oi": "^1.1.0",
+    "@iconify/icons-uil": "^1.1.1",
     "@iconify/react": "^1.1.4"
   }
 }
