--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "scripts": {
     "dev:win": "set ENVIROMENT=DEVELOPMENT && next dev -p 5001",
     "dev:mac": "ENVIROMENT=DEVELOPMENT next dev -p 5001",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "axios": "^0.21.1",
     "chart.js": "^3.1.1",
     "formik": "^2.2.6",
     "next": "10.1.3",
+    "query-string": "^7.0.0",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.2",
     "react-dom": "17.0.2",
+    "react-paginate": "^7.1.2",
     "react-redux": "^7.2.3",
     "react-spinners": "^0.10.6",
+    "react-toastify": "^7.0.4",
     "redux": "^4.0.5",
+    "swiper": "^6.5.9",
     "yup": "^0.32.9"
   },
   "devDependencies": {
