--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "chart.js": "^3.1.1",
+    "classnames": "^2.3.1",
     "formik": "^2.2.6",
     "next": "10.1.3",
+    "perfect-scrollbar": "^1.5.1",
+    "prop-types": "^15.7.2",
     "query-string": "^7.0.0",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.2",
@@ -27,6 +31,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@iconify-icons/carbon": "^1.1.4",
     "@iconify/icons-ant-design": "^1.1.0",
     "@iconify/icons-carbon": "^1.1.3",
     "@iconify/icons-dashicons": "^1.1.0",
