--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@iconify-icons/carbon": "^1.1.4",
     "@iconify/icons-ant-design": "^1.1.0",
+    "@iconify/icons-bx": "^1.1.0",
     "@iconify/icons-carbon": "^1.1.3",
+    "@iconify/icons-clarity": "^1.1.1",
     "@iconify/icons-dashicons": "^1.1.0",
     "@iconify/icons-fe": "^1.1.0",
     "@iconify/icons-fluent": "^1.1.14",
