--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@iconify/icons-ant-design": "^1.1.0",
+    "@iconify/icons-bi": "^1.1.5",
     "@iconify/icons-bx": "^1.1.0",
     "@iconify/icons-carbon": "^1.1.3",
     "@iconify/icons-clarity": "^1.1.1",
@@ -43,6 +44,8 @@
     "@iconify/icons-fluent": "^1.1.14",
     "@iconify/icons-gridicons": "^1.1.1",
     "@iconify/icons-ic": "^1.1.3",
+    "@iconify/icons-icomoon-free": "^1.1.0",
+    "@iconify/icons-jam": "^1.1.0",
     "@iconify/icons-oi": "^1.1.0",
     "@iconify/icons-uil": "^1.1.1",
     "@iconify/react": "^1.1.4"
