--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@iconify/icons-ic": "^1.1.3",
     "@iconify/icons-icomoon-free": "^1.1.0",
     "@iconify/icons-jam": "^1.1.0",
+    "@iconify/icons-mdi": "^1.1.15",
     "@iconify/icons-oi": "^1.1.0",
     "@iconify/icons-uil": "^1.1.1",
     "@iconify/react": "^1.1.4"
